k8s/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  labels:
    app: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi-app
        image: paulbaz87/fastapi-app:v1
        # image: fastapi-app:local
        # imagePullPolicy: Never
        # command: ["python", "database.py"]  
        ports:
        - containerPort: 8000
